# flags

./: CMakeLists.txt  README.md
include/flags/: errors.hpp  flags.hpp  option.hpp  option_spec.hpp  validations.hpp
include/options/: app.hpp  errors.hpp  option.hpp  option_spec.hpp  options.hpp  validations.hpp
src/: app.cpp  errors.cpp  option.cpp  option_spec.cpp  validations.cpp
tests/: CMakeLists.txt  simple.cpp
